added function scoreboard, and 'new game' button

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snake Game</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="content">
         <div id="title">SNAKE</div>
         <div class="scores">
             <div id="hiscore">high score</div>
-            <div id="scoreboard">scoreboard</div>
+            <div id="scoreboard">score:</div>
         </div>
         <canvas id="gameArea" width="600" height="400"></canvas>  
+        <button id="newGame">New Game</button>
     </div>
 
 </body>
