--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div class="content">
-        <div id="title">SNAKE</div>
+        <div id="title">SNAKE 🐍</div>
         <div class="scores">
-            <div id="hiscore">high score</div>
+            <div id="hiscore">high score: 0</div>
             <div id="scoreboard">score:</div>
         </div>
         <canvas id="gameArea" width="600" height="400"></canvas>  
