moved snake to upper left quadrant of canvas

--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 </head>
 <body>
     <div class="content">
-        <div id="title">SNAKE 🐍</div>
+        <div id="title">SNAKE</div>
         <div class="scores">
             <div id="hiscore">high score: 0</div>
             <div id="scoreboard">score:</div>
         </div>
-        <canvas id="gameArea" width="600" height="400"></canvas>  
+        <canvas id="gameArea" width="450" height="450"></canvas>  
         <button id="newGame">New Game</button>
+        <p>Press 'New Game' to begin.<br>
+        Control the snake with arrow keys<br>
+        on your 
+        keyboard to eat the apple
+        </p>
     </div>
 
 </body>
