--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="title">SNAKE</div>
         <div class="scores">
             <div id="hiscore">high score: 0</div>
-            <div id="scoreboard">score:</div>
+            <div id="scoreboard">score: 0</div>
         </div>
         <canvas id="gameArea" width="450" height="450"></canvas>  
         <button id="newGame">New Game</button>
